# Polkadex

node/: Cargo.toml
node/src/: chain_spec.rs
pallets/polkadex/src/: data_structure.rs  lib.rs
runtime/src/: lib.rs
scripts/: bootnode_alice.sh  createCustomSpec.sh  customSpec.json  customSpecRaw.json  log.txt  observer.sh  rpc_test.sh  validator_bob.sh  validator_charlie.sh  validator_dave.sh  validator_eve.sh
tutorials/simulate/: checkPool.js  package.json  simulate_trades.js
