[package]
authors = ['Polkadex Team https://github.com/Polkadex-Substrate/Polkadex']
build = 'build.rs'
description = 'Polkadex: Orderbook based Decentralized Chain'
edition = '2018'
homepage = 'https://github.com/Polkadex-Substrate/Polkadex'
license = 'Apache 2.0'
name = 'node-polkadex'
repository = 'https://github.com/Polkadex-Substrate/Polkadex'
version = '2.0.0'

[[bin]]
name = 'node-polkadex'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-polkadex-runtime = { path = '../runtime', version = '2.0.0' }
rpc = { path = "../pallets/polkadex/rpc" }


# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-consensus-babe = '0.8.0'
sc-consensus-slots = '0.8.0'
runtime-api = { path = "../pallets/polkadex/runtime-api" }
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus-babe = '0.8.0'

sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
substrate-frame-rpc-system = '2.0.0'



